@@ -16,12 +16,12 @@
   </properties>
   <dependencies>
       <!-- POI核心库 -->
+    <!-- 处理 DOCX 文件（包含 OOXML 支持） -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
       <version>5.2.3</version>
     </dependency>
-    <!-- 处理 DOCX 文件（包含 OOXML 支持） -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>org.apache.xmlbeans</groupId>
       <artifactId>xmlbeans</artifactId>
-      <version>5.1.1</version>
+      <version>5.3.0</version>
     </dependency>
       <!-- 其他依赖项... -->
     <dependency>
@@ -97,6 +97,14 @@
               <noManPages>true</noManPages>
               <stripDebug>true</stripDebug>
               <noHeaderFiles>true</noHeaderFiles>
+              <jvmArgs>
+                <jvmArg>--add-opens</jvmArg>
+                <jvmArg>org.apache.poi.ooxml/org.apache.poi.xwpf.usermodel=com.ind.word_style_controller</jvmArg>
+                <jvmArg>--add-opens</jvmArg>
+                <jvmArg>org.apache.xmlbeans/org.openxmlformats.schemas.wordprocessingml.x2006.main=com.ind.word_style_controller</jvmArg>
+                <jvmArg>--add-opens</jvmArg>
+                <jvmArg>java.base/java.lang.reflect=com.ind.word_style_controller</jvmArg>
+              </jvmArgs>
             </configuration>
           </execution>
         </executions>
